tests/errors/syn_class_var1.java
public class syn_class_var1 {
public String name ;
}